--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -241,5 +241,7 @@ $border-color-subtle: $grisulado-100;
 $box-shadow: 0 0 0 0.125rem $grisulado-100;
 $box-shadow-subtle: 0 0 0 0.125rem $grisulado-50;
 
+$outline-border: 0.125rem solid $grisulado-100;
+
 $outline-transparent: 0.25rem solid transparent;
 $outline-transparent-subtle: 0.125rem solid transparent;
